# AuditReady

./: .gitignore  Cargo.toml  README.md  appsettings.json
.github/workflows/: release.yml
crates/agent/: Cargo.toml
crates/agent/src/: collector.rs  config.rs  jobs.rs  main.rs  models.rs  network_monitor.rs  pending_updates.rs  process_monitor.rs  publisher.rs
crates/agent/src/tunnel/: client.rs  mod.rs  pty.rs
crates/agent/wix/: main.wxs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
scripts/: install-macos.sh  install-windows.ps1  install.sh  restart-macos.sh  restart-windows.ps1  restart.sh  update-token-windows.ps1  update-token.sh  update-windows.ps1  update.sh
src/: collector.rs  config.rs  main.rs  network_monitor.rs
wix/: main.wxs
