[package]
name = "auditready"
version = "0.1.0"
edition = "2021"
description = "Cross-platform tool that lists all installed software on Windows and macOS"

[[bin]]
name = "auditready"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.31"
ureq = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
]}

[profile.release]
opt-level = 3
lto = true
strip = true
