[package]
name = "auditready"
version = "0.1.1"
edition = "2021"
description = "Cross-platform tool that lists all installed software on Windows and macOS"

[[bin]]
name = "auditready"
path = "src/main.rs"

[dependencies]
anyhow = "1"
auditready-protocol = { path = "../protocol" }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
portable-pty = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.31"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
tracing = "0.1"
tracing-subscriber = "0.3"
ureq = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
]}
